[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-lists"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MPL-2.0"
keywords = []
authors = [{ name = "Arturo Filastò", email = "arturo@filasto.net" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/ooni/test-lists#readme"
Issues = "https://github.com/ooni/test-lists/issues"
Source = "https://github.com/ooni/test-lists"

[tool.hatch.version]
path = "src/test_lists/__about__.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest", "click"]
path = ".venv/"

[tool.hatch.envs.default.scripts]
test-lists = "python -m test_lists.cli {args}"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/test_lists tests}"

[tool.coverage.run]
source_pkgs = ["test_lists", "tests"]
branch = true
parallel = true
omit = ["src/test_lists/__about__.py"]

[tool.coverage.paths]
test_lists = ["src/test_lists", "*/test-lists/src/test_lists"]
tests = ["tests", "*/test-lists/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
